--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,23 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  publish:
+  publish-binary-serializable:
     permissions:
       id-token: write
 
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+
+    with:
+      working-directory: packages/binary_serializable
+
+  publish-binary-serializable-generator:
+    needs:
+      - publish-binary-serializable
+
+    permissions:
+      id-token: write
+
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+
+    with:
+      working-directory: packages/binary_serializable_generator
