--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,28 +1,12 @@
 name: Publish to pub.dev
 
 on:
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize, reopened, labeled, unlabeled]
   push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+    tags: ["[A-z]+-v[0-9]+.[0-9]+.[0-9]+"]
 
 jobs:
-  publish-binary-serializable:
-    permissions:
-      id-token: write
-
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
-
-    with:
-      working-directory: packages/binary_serializable
-
-  publish-binary-serializable-generator:
-    needs:
-      - publish-binary-serializable
-
-    permissions:
-      id-token: write
-
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
-
-    with:
-      working-directory: packages/binary_serializable_generator
+  publish:
+    uses: dart-lang/ecosystem/.github/workflows/publish.yaml@main
